# fals3

./: .gitignore  Cargo.toml  rust-toolchain.toml
.beads/: .beads-credential-key  README.md  config.yaml  metadata.json
.github/workflows/: ci.yml  release.yml
crates/fals3-core/: Cargo.toml
crates/fals3-core/src/: error.rs  lib.rs  meta.rs  paths.rs  store.rs  tests.rs
crates/fals3-node/: Cargo.toml
crates/fals3-node/src/: lib.rs
docs/: DECISIONS.md  PROJECT_SPEC.md
npm/: README.md  fals3y-0.1.0.tgz  helpers.d.ts  helpers.js  index.d.ts  index.js  package-lock.json  package.json  sdk-shim.d.ts  sdk-shim.js
npm/npm/darwin-arm64/: package.json
npm/npm/darwin-x64/: package.json
npm/npm/linux-arm64-gnu/: package.json
npm/npm/linux-x64-gnu/: package.json
npm/npm/win32-x64-msvc/: package.json
npm/test/: bucket.spec.js  conditions.spec.js  copy.spec.js  errors.spec.js  helpers.spec.js  list.spec.js  multipart.spec.js  object.spec.js  sdk-shim.spec.js
