[package]
name = "fals3-core"
description = "Pure-Rust S3 simulator over a local filesystem (no NAPI dependency)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
